@@ -1,3 +1,4 @@
+/*
 using System.Collections.Generic;
 using Terraria.ID;
 using Terraria.ModLoader;
@@ -39,3 +40,4 @@ namespace PaperMarioItems.Common.NPCs
         }
     }
 }
+*/
