@@ -1,0 +1,17 @@
+using Terraria;
+using Terraria.ID;
+using Terraria.ModLoader;
+
+namespace PaperMarioItems.Content.Items.Treasure
+{ 
+	public class StarStone : ModItem
+	{
+		public override void SetDefaults()
+		{
+			Item.width = 38;
+			Item.height = 36;
+			Item.value = Item.sellPrice(gold: 5);
+			Item.rare = ItemRarityID.Yellow;
+		}
+	}
+}
